--- a/app/src/main/res/layout/activity_task_finish.xml
+++ b/app/src/main/res/layout/activity_task_finish.xml
@@ -666,6 +666,60 @@
                             android:textSize="9sp" />
 
                     </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal">
+
+                        <ProgressBar
+                            android:id="@+id/vertical_progressbar6"
+                            style="@style/Widget.ProgressBar.VerticalJs"
+                            android:layout_width="8dp"
+                            android:layout_height="160dp"
+                            android:progress="40" />
+
+                        <View
+                            android:id="@+id/view6"
+                            android:layout_width="8dp"
+                            android:layout_height="160dp"
+                            android:layout_marginStart="@dimen/dimen_5dp"
+                            android:layout_toEndOf="@id/vertical_progressbar6"
+                            android:background="@drawable/progress_task_finish_bg" />
+
+
+                        <TextView
+                            android:id="@+id/tv_bfb6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/view6"
+                            android:layout_marginTop="@dimen/dimen_15dp"
+                            android:text="25%"
+                            android:textColor="#282C37"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/tv_sj6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_bfb6"
+                            android:text="25min"
+                            android:textColor="@color/color_666666"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/tv_sj6"
+                            android:drawableStart="@drawable/icon_task_7x"
+                            android:drawablePadding="@dimen/common_margin_2"
+                            android:text="50~60%"
+                            android:textColor="#FFB300"
+                            android:textSize="9sp" />
+
+                    </RelativeLayout>
 
 
                 </LinearLayout>
@@ -690,6 +744,7 @@
 
 
                 <TextView
+                    android:id="@+id/tv_ztime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
