--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -51,6 +51,11 @@
             android:visibility="gone" />
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_0.5dp"
+        android:background="@color/line_color" />
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -67,7 +72,8 @@
                 android:id="@+id/rl_sbgl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_15dp">
+                android:layout_marginHorizontal="@dimen/dimen_15dp"
+                android:layout_marginTop="@dimen/dp_10">
 
                 <TextView
                     android:id="@+id/tv_1"
@@ -91,42 +97,21 @@
                     android:scaleType="center"
                     android:src="@drawable/icon_jiantou_you_00" />
 
-                <TextView
-                    android:id="@+id/tv_lianjie"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_1"
-                    android:layout_marginTop="9dp"
-                    android:text="运动设备未连接"
-                    android:textColor="@color/color_999999"
-                    android:textSize="@dimen/sp_14" />
-
-                <ImageView
-                    android:layout_width="@dimen/dimen_50dp"
-                    android:layout_height="@dimen/dimen_50dp"
-                    android:layout_alignParentEnd="true"
-                    android:src="@mipmap/ic_2" />
-
             </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_margin="@dimen/dimen_10dp"
-                android:background="#F7F7F7" />
 
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dimen_15dp">
+                android:layout_marginHorizontal="@dimen/dimen_15dp"
+                android:layout_marginTop="@dimen/dp_10">
 
                 <TextView
-                    android:id="@+id/tv_2"
+                    android:id="@+id/tv_lianjie"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@id/iv_two_img"
-                    android:text="智能跑步机"
+                    android:text="暂未连接设备"
                     android:textColor="@color/color_666666"
                     android:textSize="@dimen/dimen_15dp" />
 
@@ -135,17 +120,17 @@
                     android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_2"
+                    android:layout_below="@id/tv_lianjie"
                     android:layout_marginTop="@dimen/dimen_2dp"
                     android:layout_toEndOf="@id/iv_two_img"
-                    android:text="2020.07.12  15:32"
+                    android:text="--"
                     android:textColor="@color/color_999999"
                     android:textSize="13sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_2"
+                    android:layout_below="@id/tv_lianjie"
                     android:layout_marginStart="@dimen/dp_10"
                     android:layout_marginTop="@dimen/dimen_2dp"
                     android:layout_toEndOf="@id/tv_time"
@@ -157,10 +142,9 @@
 
                 <ImageView
                     android:id="@+id/iv_two_img"
-                    android:layout_width="wrap_content"
+                    android:layout_width="35dp"
+                    android:layout_margin="@dimen/dimen_5dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/tv_2"
-                    android:layout_alignBottom="@id/tv_time"
                     android:adjustViewBounds="true"
                     android:src="@mipmap/ic_2" />
 
@@ -510,10 +494,10 @@
                     android:layout_marginTop="@dimen/dimen_30dp"
                     android:background="@drawable/bj_shape_line_f2_25"
                     android:gravity="center"
-                    android:visibility="invisible"
                     android:text="查看更多"
                     android:textColor="@color/color_999999"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
