--- a/app/src/main/res/layout/item_history_equipment.xml
+++ b/app/src/main/res/layout/item_history_equipment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_10"
+    android:layout_marginHorizontal="@dimen/dp_10"
     android:background="@drawable/bj_circle_fff_10"
     android:orientation="vertical">
 
@@ -31,10 +31,10 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/dp_10"
-        android:background="@drawable/bj_shape_line_66_6"
+        android:background="@drawable/bj_circle_theme_5"
         android:gravity="center"
-        android:text="已关注"
-        android:textColor="@color/color_808080"
+        android:text="开始连接"
+        android:textColor="@color/color_ffffff"
         android:textSize="10sp" />
 
     <ImageView
