--- a/app/src/main/res/layout/item_home_three_sq.xml
+++ b/app/src/main/res/layout/item_home_three_sq.xml
@@ -1,90 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_5dp"
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/color_ffffff"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_ffffff"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
+            <ImageView
+                android:id="@+id/iv_icon"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@mipmap/ic_13" />
 
-                <com.jxkj.fit_5a.conpoment.view.SquareImageView
-                    android:id="@+id/iv_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@mipmap/ic_13" />
+            <ImageView
+                android:id="@+id/iv_baofang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baofang" />
+        </RelativeLayout>
 
-                <ImageView
-                    android:id="@+id/iv_baofang"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baofang" />
-            </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_10"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="标题标题标题标题标题标题标题标题"
+            android:textColor="@color/color_333333"
+            android:textSize="13sp" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_10">
+
+
+            <ImageView
+                android:id="@+id/iv_head_img"
+                android:layout_width="@dimen/dimen_20dp"
+                android:layout_height="@dimen/dimen_20dp"
+                android:layout_marginStart="@dimen/dimen_5dp"
+                android:src="@mipmap/ic_6" />
 
             <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/tv_num"
+                android:layout_marginStart="@dimen/dimen_5dp"
+                android:layout_toEndOf="@id/iv_head_img"
                 android:ellipsize="end"
-                android:maxLines="2"
-                android:text="标题标题标题标题标题标题标题标题"
-                android:textColor="@color/color_333333"
-                android:textSize="13sp" />
+                android:maxLines="1"
+                android:padding="@dimen/dimen_2dp"
+                android:text="孙娜"
+                android:textColor="@color/color_999999"
+                android:textSize="11sp" />
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tv_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/dp_10"
-                android:layout_marginBottom="@dimen/dp_10">
-
-
-                <ImageView
-                    android:id="@+id/iv_head_img"
-                    android:layout_width="@dimen/dimen_30dp"
-                    android:layout_height="@dimen/dimen_30dp"
-                    android:layout_alignTop="@id/tv_name"
-                    android:layout_alignBottom="@id/tv_name"
-                    android:src="@mipmap/ic_6" />
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dp_10"
-                    android:layout_toEndOf="@id/iv_head_img"
-                    android:padding="@dimen/dimen_2dp"
-                    android:text="孙娜"
-                    android:textColor="@color/color_999999"
-                    android:textSize="11sp" />
-
-                <TextView
-                    android:id="@+id/tv_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@id/tv_name"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="@dimen/dimen_5dp"
-                    android:drawableStart="@drawable/icon_xin_99"
-                    android:drawablePadding="@dimen/dimen_5dp"
-                    android:text="12345"
-                    android:textColor="@color/color_999999"
-                    android:textSize="11sp" />
-            </RelativeLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                android:layout_alignTop="@id/tv_name"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/dimen_5dp"
+                android:drawableStart="@drawable/icon_xin_99"
+                android:drawablePadding="@dimen/dimen_5dp"
+                android:text="12345"
+                android:textColor="@color/color_999999"
+                android:textSize="11sp" />
+        </RelativeLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
