--- a/app/src/main/res/layout/item_home_dynamic.xml
+++ b/app/src/main/res/layout/item_home_dynamic.xml
@@ -85,6 +85,7 @@
             android:visibility="gone" />
 
         <RelativeLayout
+            android:id="@+id/rv_img_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
